Revert "Downgraded to Java 8 (for Android compatibility) and made this a multi-release jar (for JPMS support)"
This reverts commit 08789a5ca7d4e2c8d903ef5e00b2d43fccd73236.