@@ -10,7 +10,6 @@ import org.mockito.Mockito;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
@@ -26,11 +25,11 @@ class Playground {
 
     @Test
     public void test() {
-        CloudItemMetadata cloudItemMetadata = new CloudItemMetadata("name", Paths.get("/path"), FILE, Optional.empty(), Optional.empty());
+        final var cloudItemMetadata = new CloudItemMetadata("name", Path.of("/path"), FILE, Optional.empty(), Optional.empty());
 
         when(cloudProvider.createFolder(any())).thenAnswer(folder -> CompletableFuture.supplyAsync(() -> folder));
 
-        String result = cloudProvider.createFolder(Paths.get("/foo/bar"))
+        final var result = cloudProvider.createFolder(Path.of("/foo/bar"))
                 .thenCompose(cloudProvider::delete)
                 .thenCompose((node) -> {
                     throw new RuntimeException("e");
@@ -41,7 +40,7 @@ class Playground {
 
         assertEquals(result, "Foo");
 
-        DemoCloudProvider demoCloudProvider = new DemoCloudProvider();
+        final var demoCloudProvider = new DemoCloudProvider();
         demoCloudProvider.read(cloudItemMetadata.getPath(), System.out::println);
     }
 
